<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Ama"
    tools:context=".Regis">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.120000005">

        <EditText
            android:id="@+id/edit1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/no"
            android:textColor="@color/colorito"
            android:inputType="textPersonName"
            android:text="" />

        <EditText
            android:id="@+id/edit2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/A"
            android:textColor="@color/colorito"
            android:inputType="textPersonName"
            android:text="" />

        <EditText
            android:id="@+id/edit3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/U"
            android:textColor="@color/colorito"
            android:inputType="textPersonName"
            android:text="" />

        <EditText
            android:id="@+id/edit4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/P"
            android:textColor="@color/colorito"
            android:inputType="numberPassword" />

        <EditText
            android:id="@+id/edit5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/M"
            android:textColor="@color/colorito"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <Button
        android:id="@+id/registrado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:textColor="@color/ver"
        android:background="@drawable/redondo"
        android:text="@string/bre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.100000024" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="210dp"
        android:layout_height="220dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrado"
        app:layout_constraintVertical_bias="0.45"
        app:srcCompat="@drawable/amarimanda" />

</androidx.constraintlayout.widget.ConstraintLayout>